# yew-app

./: Cargo.toml
src/: lib.rs  main.rs  video.rs  video_details.rs  videos_list.rs
